--- a/src/index.css
+++ b/src/index.css
@@ -137,11 +137,12 @@ a {
 .productImage {
   max-width: 100%;
   border-radius: 1rem;
-  padding: 2rem;
+  padding: 1.5rem;
   transition: 0.5s;
 }
 
 .productImage:hover {
+  cursor: pointer;
   scale: 1.1;
 }
 
@@ -171,6 +172,21 @@ a {
   font-size: 1rem;
   text-decoration: none;
   color: var(--clr-main);
+  border: 1px solid black;
+  border-radius: .5rem;
+  padding: 1rem;
+  margin-top: 1rem;
+  text-align: center;
+}
+
+.details:hover {
+  font-size: 1rem;
+  background-color: var(--clr-main);
+  color: var(--clr-white);
+  border: 1px solid var(--clr-main);
+  border-radius: .5rem;
+  padding: 1rem;
+  margin-top: 1rem;
 }
 
 /* FOOTER */
