--- a/src/index.css
+++ b/src/index.css
@@ -196,6 +196,7 @@ a {
   -webkit-box-shadow: 0px -3px 5px -4px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px -3px 5px -4px rgba(0,0,0,0.75);
   box-shadow: 0px -3px 5px -4px rgba(0,0,0,0.75);
+  margin-top: auto;
   align-items: center;
   justify-content: space-between;
   background-color: var(--clr-white);
